# word-guessing-game

./: .gitignore  CMakeLists.txt  README.md  gamestate.cpp  gamestate.h  main.cpp  main.qml
components/: LetterGuess.qml  WordDisplay.qml  WordGuess.qml
cpp-unit-tests/: CMakeLists.txt  tst_game_state_case.cpp
docs/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  appword-guess-game.html  appword-guess-game.js  appword-guess-game_qmltyperegistrations.cpp  cmake_install.cmake
docs/.cmake/api/v1/reply/: cache-v2-7a2f465ffa3681747d18.json  cmakeFiles-v1-8045c85cb2163c34fcc4.json  codemodel-v2-ef39288cfa2e916da2c4.json  directory-.-Release-78988f06f2f2a016f655.json  directory-test.cpp-unit-tests-Release-c946025e57ae4418c5f5.json  directory-test.qml-unit-tests-Release-faea11ff3e3428406be3.json  index-2023-01-27T17-28-32-0770.json  target-WordGuessQmlCase-Release-4e167aa5ea21b735e686.json  target-WordGuessQmlCase_autogen-Release-994f3ce1eda927418eef.json  target-WordGuessQmlCase_autogen_timestamp_deps-Release-f61019c9e4a990bd1d1f.json  target-WordGuessUnitTests-Release-1d730360216c42fd1eab.json  target-WordGuessUnitTests_autogen-Release-5b8d1db31d5eb4e37425.json  target-WordGuessUnitTests_autogen_timestamp_deps-Release-186ed990b57909612e5f.json  target-all_qmllint-Release-56403d6debf5c3681cb2.json  target-all_qmllint_json-Release-95642dfdeeb2d419be9c.json  target-all_qmltyperegistrations-Release-0f7028fe098fe866763e.json  target-appword-guess-game-Release-69de817d4ee561272320.json  target-appword-guess-game_autogen-Release-f5d65926380b9f120218.json  target-appword-guess-game_autogen_timestamp_deps-Release-9276693f8a3d0b2e7da8.json  target-appword-guess-game_other_files-Release-a2928674560feeaac4fc.json  target-appword-guess-game_qmllint-Release-ddf3e19aa7228ab5e6fb.json  target-appword-guess-game_qmllint_json-Release-56571dbba28ef3f4ebdc.json  target-appword-guess-game_qmltyperegistration-Release-e7d8ef2293471ce4066f.json  target-appword-guess-game_tooling-Release-e0a38ba82428296111c1.json
docs/.qt/: QtDeploySupport.cmake
docs/.qt_plugins/: Qt6_QmlPlugins_Imports_appword-guess-game.cmake  Qt6_QmlPlugins_Imports_appword-guess-game.rsp
docs/.qtc_clangd/: compile_commands.json
docs/.qtc_clangd/.cache/clangd/index/: QChar.68C9080FA5AAA448.idx  QGuiApplication.A474B478CCE97133.idx  QHostAddress.31E50B9DE8319C64.idx  QIODevice.081001F7E22F1709.idx  QList.DF3681867314EA05.idx  QMetaType.261671DA73DDF962.idx  QNetworkAccessManager.04B6681F169B8100.idx  QNetworkCookie.8D48DD5BCFEEBD16.idx  QNetworkReply.69EA315F0C7D5C0B.idx  QNetworkRequest.CF9BF974D7BD8502.idx  QObject.49DA29C30F4C8B15.idx  QQmlApplicationEngine.12786A5A67F1563C.idx  QQmlContext.F8BBC709993FE73D.idx  QQmlEngine.7F9903E7E1C86D21.idx  QSharedDataPointer.36E6EEAF1D2D7D24.idx  QString.BD8D22794DAE5E9C.idx  QUrl.18CD2D534F536FA1.idx  QVariant.483D7FA41DAB80CB.idx  __availability.2BC5F34347FD4C8A.idx  __bit_reference.9DA70245E2156020.idx  __bits.30EAC7EE8E8BAA56.idx  __bsd_locale_fallbacks.h.E50B54E268F2C594.idx  __config.3FC3D58B8F3C625B.idx  __config_site.6B3DF05943E4EC59.idx  __cxxabi_config.h.E52FB9DC84F07C7D.idx  __debug.0CEE61B37F200F85.idx  __errc.F6917478E583A861.idx  __functional_base.D65C123BF5CAEA80.idx  __hash_table.E67ABDE0A11E4AB9.idx  __locale.15C0179E78E90AB5.idx  __mbstate_t.h.46370D37736D4434.idx  __mutex_base.C323569B2E3B6856.idx  __node_handle.F2945DB56786CFCB.idx  __nullptr.00B0FF9DA3AC43FE.idx  __split_buffer.0FF6E52DE9717237.idx  __stddef_max_align_t.h.2D0514D58D5F8412.idx  __string.045DDC662783FDA1.idx  __threading_support.819005DDB4033D0E.idx  __tree.1B7F6C1C02B670E1.idx  __tuple.1B485C9D823CF19D.idx  (+682 more)
docs/.rcc/: appword-guess-game_raw_qml_0.qrc  qmake_word-guess-game.qrc  qrc_appword-guess-game_raw_qml_0.cpp  qrc_qmake_word-guess-game.cpp
docs/.rcc/qmlcache/: appword-guess-game_qml_loader_file_list.rsp  appword-guess-game_qmlcache_loader.cpp
docs/.rcc/qmlcache/appword-guess-game_src/: main_qml.cpp
docs/.rcc/qmlcache/appword-guess-game_src/components/: GameEnd_qml.cpp  GreetingView_qml.cpp  LetterGuess_qml.cpp  MissedLetters_qml.cpp  MissedWords_qml.cpp  WordDisplay_qml.cpp  WordGuess_qml.cpp
docs/.rcc/qmlcache/appword-guess-game_src/components/buttons/: ColorButton_qml.cpp
docs/appword-guess-game_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
docs/appword-guess-game_autogen/UVLADIE3JM/: moc_gamemanager.cpp  moc_gamemanager.cpp.d  moc_gamemanager.cpp.json
docs/meta_types/: appword-guess-game_json_file_list.txt  appword-guess-game_json_file_list.txt.timestamp  qt6appword-guess-game_release_metatypes.json
docs/qmltypes/: appword-guess-game_foreign_types.txt
docs/test/cpp-unit-tests/: CTestTestfile.cmake  WordGuessUnitTests.js  cmake_install.cmake
docs/test/cpp-unit-tests/WordGuessUnitTests_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
docs/test/cpp-unit-tests/WordGuessUnitTests_autogen/VNU7RW3YIC/: moc_gamemanager.cpp  moc_gamemanager.cpp.d
docs/test/qml-unit-tests/: CTestTestfile.cmake  WordGuessQmlCase.js  cmake_install.cmake
docs/test/qml-unit-tests/WordGuessQmlCase_autogen/: deps  moc_predefs.h
docs/test/qml-unit-tests/WordGuessQmlCase_autogen/EWIEGA46WW/: moc_setup.cpp  moc_setup.cpp.d
docs/word-guess-game/: qmldir
src/: gamemanager.cpp  gamemanager.h  gamestate.cpp  gamestate.h  gamestatebuilder.cpp  gamestatebuilder.h  gamestatecreator.cpp  gamestatecreator.h  main.cpp  main.qml
src/components/: GameEnd.qml  GreetingView.qml  GuessedLetters.qml  LetterGuess.qml  MissedLetters.qml  MissedWords.qml  WordDisplay.qml  WordGuess.qml
src/components/buttons/: ColorButton.qml
src/dicts/: dictutils.cpp  dictutils.h  iwordprovider.h  longwords.cpp  longwords.h  mediumwords.cpp  mediumwords.h  shortwords.cpp  shortwords.h  wordproviderfactory.cpp  wordproviderfactory.h
test/cpp-unit-tests/: CMakeLists.txt  tst_game_manager_case.cpp  tst_game_state_case.cpp
test/cpp-unit-tests/dicts/: tst_dict_utils.cpp  tst_word_provider_factory.cpp
test/qml-unit-tests/: CMakeLists.txt  setup.cpp  tst_wordguessqmlcase.qml
